--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <div class="body d-flex">
     <div class="my-navbar">
         <div class="logo py-3 px-4"><img src="./images/Spotify logo.png"></div>
-        <a href="http://127.0.0.1:3000/index.html">
+        <a href="https://ray-sarthak.github.io/spotify_clone/">
         <div class="home d-flex py-3 ">
           <div class="homeimg"><svg xmlns="http://www.w3.org/2000/svg" width="31" height="34" viewBox="0 0 31 34" fill="none">
             <g clip-path="url(#clip0_306_615)">
